--- a/rpy2-docker/docker-compose.yml
+++ b/rpy2-docker/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./code:/code
       - /mnt/data/metdna-upload:/mnt/data/metdna-upload
+      - /etc/localtime:/etc/localtime:ro
 networks:
   default:
     external:
