--- a/jupyter-notebook/docker-compose.yml
+++ b/jupyter-notebook/docker-compose.yml
@@ -2,15 +2,13 @@ version: '3'
 
 services:
   jupyter:
-    image: jupyter/scipy-notebook
+    image: jupyter/datascience-notebook
     restart: on-failure
     volumes:
-      - /mnt/home/belter/Jupyter/work:/home/jovyan/work
+      - /mnt/home/belter/github/jupyter-note:/nmt/notebook
       - /etc/localtime:/etc/localtime:ro
     environment:
       - PYTHONUNBUFFERED=1
     ports:
       - 8888:8888
-    command:
-      - start-notebook.sh
-      - --NotebookApp.password='sha1:48d34...:<your hashed password>'
+    command: /bin/bash -c "jupyter lab --no-browser --ip=0.0.0.0 --notebook-dir=/mnt/notebook"
