deploy shiny app

--- a/nginx/config/nginx/conf.d/imms.conf
+++ b/nginx/config/nginx/conf.d/imms.conf
@@ -1,5 +1,6 @@
 server {
-    listen       80;
+    listen      80;
+    listen [::]:80;
     server_name  imms.zhulab.cn;
     
     # note that these lines are originally from the "location /" block
@@ -27,9 +28,20 @@ server {
     #    /index.html;
     #}
 
-    # Django media
-    location /media  {  # 设置www.ourlab.cn/media的具体路径，这里是django项目配置文件中的`MEDIA_ROOT`的位置
-        # your Django project's media files - amend as required
-        alias /mnt/data/metdna-upload;
+    # shiny app
+    location ~* ^/LipidIMMS  {
+      #rewrite ^/lipidIMMS /lipidIMMS/ break; 
+      #rewrite ^/[lL]ipid[iI][mM]+[sS][\/]?$ /lipidIMMS/ break; 
+      rewrite ^/[lL]ipid[iI][mM]+[sS]/?(.*)$ /$1 break;
+      proxy_pass http://backend;
+      #proxy_redirect http://backend $scheme://$host/lipidIMMS/;
+      #proxy_redirect http://backend $scheme://$host/lipidIMMS;
+      #proxy_redirect http://backend $scheme://$host/lipidimms/;
+      #proxy_redirect http://backend $scheme://$host/lipidimms;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_read_timeout 20d;
+      proxy_buffering off;
     }
 }
