--- a/nginx/config/nginx/nginx.conf
+++ b/nginx/config/nginx/nginx.conf
@@ -29,6 +29,18 @@ http {
 
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
+    
+    # add this config for shiny-server
+    # Map proxy settings for RStudio
+    map $http_upgrade $connection_upgrade {
+      default upgrade;
+      ''      close;
+    }
+    
+    # define upstream directly, 8010 is the port of Shiny App
+    upstream backend {
+        server imms.zhulab.cn:8010;
+    }
 
     # Load modular configuration files from the /etc/nginx/conf.d directory.
     # See http://nginx.org/en/docs/ngx_core_module.html#include
