--- a/metdna/rpy2-docker/docker-compose.yml
+++ b/metdna/rpy2-docker/docker-compose.yml
@@ -1,10 +1,14 @@
-version: '3'
+version: '2.2'
 
 services:
   metdna:
     image: onlybelter/rpy2-docker2
     restart: on-failure
     command: python3 run_metDNA.py
+    # Limit a container's resources
+    # https://docs.docker.com/config/containers/resource_constraints/
+    cpus: 8
+    mem_limit: 16g
     working_dir: /code
     volumes:
       - ./code:/code
@@ -12,7 +16,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - PYTHONUNBUFFERED=1
-      
+
 networks:
   default:
     external:
